# veritas

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml  veritas  veritas-host
.github/workflows/: docker-publish.yml
docker/: Dockerfile  entrypoint.sh  run.sh
docs/: review-modes.md
examples/: example_evaluation.yaml
notes/: 2026-06-03-manager-loop-trajectory.md  2026-06-03-phase3-research-agents.md
scripts/: build_demo_bundle.py  build_static_demo.py  test_docker.sh
src/veritas/: __init__.py
src/veritas/cli/: __init__.py  main.py
src/veritas/core/: __init__.py  checklist.py  citations.py  config.py  config_env.py  container.py  diligence.py  evidence.py  fix_severity.py  grading.py  inline.py  manager.py  models.py  oar_viewer.py  paper_claims.py  paper_parse.py  paper_review.py  pipeline_state.py  plan_extractor.py  replication.py  report_generator.py  research.py  review.py  review_bundle.py  runner.py  verify.py
src/veritas/review_engine/: VENDORED.md  cli.py  models.py  prompts.py  utils.py
src/veritas/templates/: __init__.py  prompt_generator.py
src/veritas/utils/: __init__.py  json_utils.py  pdf.py  security.py  (+2 more)
templates/: checklist_generation.md
templates/analyze/: paper_claims_extraction.md  resource_estimation.md
templates/assess/: fix_severity.md
templates/codegen/: session_instructions.md
templates/demo/: inline_viewer.html  referee_report.html
templates/evaluation/: citation_audit.md  citation_check.md  code_evaluation.txt  consistency_evaluation.txt  contextual_evaluation.md  fix_severity.md  generalization_evaluation.txt  instruction_evaluation.txt  replication_evaluation.txt  scoring.txt
templates/inline/: reviewer_comments.md  viewer.html.j2
templates/manager/: replication_review.md
templates/replication/: plan_generation.md  session_instructions.md
templates/report/: insufficient_spec.md  report.html.j2  review_report.html.j2
templates/research/: literature_finder.md  redactor.md  resource_finder.md
templates/review/: static_review.md
templates/verify/: single_claim.md
tests/: conftest.py  test_checklist.py  test_citations.py  test_cli_models.py  test_config.py  test_config_env.py  test_config_models.py  test_container.py  test_diligence.py  test_evidence.py  test_grading.py  test_inline.py  test_integration.py  test_json_utils.py  test_manager.py  test_manager_loop_integration.py  test_models.py  test_pipeline_state.py  test_prompt_generator.py  test_report_engines.py  test_report_generator.py  test_research.py  test_review.py  test_review_bundle.py  test_runner.py  test_runner_engines.py  test_security.py  test_verify.py  test_wrappers.py
(+27 files in other folders)
