[project]
name = "veritas"
version = "0.1.0"
description = "A replication agent for evaluating the reproducibility of scientific findings"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Veritas Team" }
]

dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    # --- vendored OpenAIReview review engine (src/veritas/review_engine) ---
    # Paper parsing (pymupdf4llm path needs no API key); LLM client; tokenizer.
    "openai>=2.0.0",
    "tiktoken>=0.7.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=1.24.0",
    "python-docx>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]
# Higher-fidelity PDF parsing (hosted OCR / layout-aware). OPTIONAL and not
# installed by default: the engine falls back to pymupdf4llm (no key, no extra
# deps). These pin Python >=3.11, so install them explicitly only where needed:
#   uv pip install "pymupdf-layout>=1.27.0" "mistral-ocr-cli>=1.2.0"
# (Mistral OCR additionally needs MISTRAL_API_KEY.)

[project.scripts]
veritas = "veritas.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veritas"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
