[project]
name = "veritas"
version = "0.1.0"
description = "A replication agent for evaluating the reproducibility of scientific findings"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Veritas Team" }
]

dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/ChicagoHAI/veritas"
Repository = "https://github.com/ChicagoHAI/veritas"
Issues = "https://github.com/ChicagoHAI/veritas/issues"

[project.scripts]
veritas = "veritas.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veritas"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
